cambios en clientes y pagos

--- a/LeaniM/altaClientes.html
+++ b/LeaniM/altaClientes.html
@@ -230,7 +230,9 @@
                   </div>
                   <!-- /.card-body -->
                   <div class="card-footer">
-                    <button type="submit" class="btn btn-info"><i class="fa fa-plus"></i> AGREGAR CLIENTE</button>
+                    <!-- MARQUITOS CUANDO EL FORMULARIO ESTÉ OK DEBERÍA 
+                    ENVIARLO AL HTML DEL PANEL DEL CLIENTE CREADO -->
+                    <a href="./panelClientes.html" class="btn btn-info"><i class="fa fa-plus"></i> AGREGAR CLIENTE</a>
                     <a href="./clientes.html" class="btn btn-default float-right">Cancelar</a>
                   </div>
                   <!-- /.card-footer -->
