--- a/LeaniM/panelClientes.html
+++ b/LeaniM/panelClientes.html
@@ -107,7 +107,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="./altaClientes.html" class="nav-link">">
+                  <a href="./altaClientes.html" class="nav-link">
                     <i class="far fa-check-circle nav-icon"></i>
                     <p>Registro</p>
                   </a>
@@ -192,19 +192,249 @@
       <!-- Main content -->
       <section class="content">
         <div class="container-fluid">
-
+          <div class="row">
+            <div class="col-md-6">
+              <div class="info-box">
+                <span class="info-box-icon"><i class="icon ion-ios-contact"></i></span>
+                <div class="info-box-content">
+                  <span class="h4 font-weight-bold mb-0">NOMBRE DE CLIENTE</span>
+                  <span class="info-box-text">APODO DE CLIENTE</span>
+                </div>
+                <!-- /.info-box-content -->
+              </div>
+              <!-- /.info-box -->
+            </div>            
+            <div class="col-md-3">
+              <!-- Info Boxes Style 2 -->
+              <div class="info-box bg-primary">
+                <span class="info-box-icon"><i class="ion ion-ios-pricetag-outline"></i></span>
+                <div class="info-box-content">
+                  <span class="info-box-text">COMPRAS ACUMULADAS</span>
+                  <span class="info-box-number"><span>135200</span> $</span>
+                </div>
+                <!-- /.info-box-content -->
+              </div>
+              <!-- /.info-box -->
+            </div>
+            <div class="col-md-3">    
+              <div class="info-box bg-warning" id="cta-bg">
+                <span class="info-box-icon"><i class="ion-card"></i></span>
+                <div class="info-box-content">
+                  <span class="info-box-text">CUENTA CORRIENTE</span>
+                  <span class="info-box-number"><span id="ctacte">-55000</span> $</span>
+                </div>
+                <!-- /.info-box-content -->
+              </div>
+              <!-- /.info-box -->
+              </div>
+          </div>
+          <div class="row mt-3">
+            <div class="col-lg-3 col-md-6 col-12">
+              <div class="small-box">
+                <a href="#" class="d-block p-2 bg-success">
+                  <div class="inner">
+                    <h3>Vender</h3>
+                    <p>Inicie una venta</p>
+                  </div>
+                  <div class="icon"><i class="ion ion-bag"></i></div>
+                </a>
+                <div class="box-body no-padding">
+                  <table class="table table-striped bg-white">
+                    <tbody>
+                      <tr>
+                        <th>Últimas Ventas</th>
+                        <th>Fecha</th>
+                        <th style="width: 30px;">Importe</th>
+                      </tr>
+                      <tr>
+                        <td>Descripción Venta</td>
+                        <td>04/08/20</td>
+                        <td>14200 <span>$</span></td>
+                      </tr>
+                      <tr>
+                        <td>Descripción Venta 2</td>
+                        <td>04/08/20</td>
+                        <td>14200 <span>$</span></td>
+                      </tr>
+                      <tr>
+                        <td>Descripción Venta 3</td>
+                        <td>04/08/20</td>
+                        <td>14200 <span>$</span></td>
+                      </tr>
+                      <tr>
+                        <td>Descripción Venta 4</td>
+                        <td>04/08/20</td>
+                        <td>14200 <span>$</span></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12">
+              <div class="small-box">
+                <a href="#" class="d-block p-2 bg-info" data-toggle="modal" data-target="#modalPagos">
+                  <div class="inner">
+                    <h3>Pagos</h3>
+                    <p>Incorpore pagos al sistema</p>
+                  </div>
+                  <div class="icon"><i class="ion ion-cash"></i></div>
+                </a>
+                <div class="box-body no-padding">
+                  <table class="table table-striped bg-white">
+                    <tbody>
+                      <tr>
+                        <th>Últimos Pagos</th>
+                        <th>Fecha</th>
+                        <th style="width: 30px;">Importe</th>
+                      </tr>
+                      <tr>
+                        <td>Descripción Pago</td>
+                        <td>04/08/20</td>
+                        <td>14200 <span>$</span></td>
+                      </tr>
+                      <tr>
+                        <td>Descripción Pago 2</td>
+                        <td>04/08/20</td>
+                        <td>14200 <span>$</span></td>
+                      </tr>
+                      <tr>
+                        <td>Descripción Pago 3</td>
+                        <td>04/08/20</td>
+                        <td>14200 <span>$</span></td>
+                      </tr>
+                      <tr>
+                        <td>Descripción Pago 4</td>
+                        <td>04/08/20</td>
+                        <td>14200 <span>$</span></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12">
+              <div class="small-box">
+                <a href="#" class="d-block p-2 bg-danger">
+                  <div class="inner">
+                    <h3>Remitos</h3>
+                    <p>Genere remitos de compra</p>
+                  </div>
+                  <div class="icon"><i class="ion ion-clipboard"></i></div>
+                </a>
+                <div class="box-body no-padding">
+                  <table class="table table-striped bg-white">
+                    <tbody>
+                      <tr>
+                        <th>Últimos Remitos</th>
+                        <th>Fecha</th>
+                        <th style="width: 30px;">Importe</th>
+                      </tr>
+                      <tr>
+                        <td>Descripción Remito</td>
+                        <td>04/08/20</td>
+                        <td>14200 <span>$</span></td>
+                      </tr>
+                      <tr>
+                        <td>Descripción Remito 2</td>
+                        <td>04/08/20</td>
+                        <td>14200 <span>$</span></td>
+                      </tr>
+                      <tr>
+                        <td>Descripción Remito 3</td>
+                        <td>04/08/20</td>
+                        <td>14200 <span>$</span></td>
+                      </tr>
+                      <tr>
+                        <td>Descripción Remito 4</td>
+                        <td>04/08/20</td>
+                        <td>14200 <span>$</span></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12">
+              <div class="small-box">
+                <a href="#" class="d-block p-2 bg-warning">
+                  <div class="inner">
+                    <h3>Datos</h3>
+                    <p>Modifique datos del cliente</p>
+                  </div>
+                  <div class="icon"><i class="ion ion-edit"></i></div>
+                </a>
+              </div>
+            </div>
+          </div>
         </div><!-- /.container-fluid -->
       </section>
       <!-- /.content -->
     </div>
-
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-      <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
   </div>
   <!-- ./wrapper -->
+
+  <!-- Modal Pagos -->
+  <div class="modal fade" id="modalPagos" tabindex="-1" role="dialog" aria-labelledby="modalPagos" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered " role="document">
+      <div class="modal-content">
+        <div class="modal-header bg-success">
+          <h5 class="modal-title" id="modalPagos">Registrar Pago</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <!-- form start -->
+          <form role="form">
+            <div class="card-body">
+              <div class="form-group">
+                <label for="metodo">Método de Pago</label>
+                <select type="text" class="form-control" id="metodo" placeholder="Cliente">
+                  <option>Efectivo</option>
+                  <option>Cheque</option>
+                  <option>Cuenta Corriente</option>
+                  <option>Tarjeta de Débito/Crédito</option>
+                </select> 
+              </div>
+              <div class="form-group">
+                <label for="importe">Importe</label>
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text">$</span>
+                  </div>
+                  <input type="number" class="form-control" id="importe" placeholder="Importe" min="0">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="metodo">Remitos Pendientes</label>
+                <select type="text" class="form-control" id="metodo" placeholder="Cliente">
+                  <option>Remito 1</option>
+                  <option>Remito 2</option>
+                  <option>Remito 3</option>
+                  <option>Remito 4</option>
+                  <option>Remito 5</option>
+                  <option>Remito 6</option>
+                  <option>Remito 7</option>
+                  <option>Remito 8</option>
+                </select> 
+                <!-- ESTE SPAN TIENE QUE TRAER EL MONTO DEL REMITO, ESTAR ESCONDIDO MIENTRAS NO ELIJAN REMITO -->
+                <span class="float-right">Monto Adeudado: <span id="monto">45000</span> $</span>
+              </div>
+              <div class="form-group">
+                <label for="concepto">Observaciones</label>
+                <input type="text" class="form-control" id="concepto" placeholder="Detalle del pago">
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-success">INGRESAR PAGO</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- jQuery -->
   <script src="plugins/jquery/jquery.min.js"></script>
@@ -240,6 +470,15 @@
   <script src="dist/js/pages/dashboard.js"></script>
   <!-- AdminLTE for demo purposes -->
   <script src="dist/js/demo.js"></script>
+  <script>
+    let money = document.getElementById('ctacte').innerHTML;
+    console.log();
+    if( money > 0 ){
+      document.getElementById('cta-bg').className = 'info-box bg-teal';
+    } else{
+      document.getElementById('cta-bg').className = 'info-box bg-danger';
+    }
+  </script>
 </body>
 
 </html>
