--- a/LeaniM/pagos.html
+++ b/LeaniM/pagos.html
@@ -208,6 +208,15 @@
                       <input type="text" class="form-control" id="cliente" placeholder="Cliente">
                     </div>
                     <div class="form-group">
+                      <label for="metodo">Método de Pago</label>
+                      <select type="text" class="form-control" id="metodo" placeholder="Cliente">
+                        <option>Efectivo</option>
+                        <option>Cheque</option>
+                        <option>Cuenta Corriente</option>
+                        <option>Tarjeta de Débito/Crédito</option>
+                      </select> 
+                    </div>
+                    <div class="form-group">
                       <label for="importe">Importe</label>
                       <div class="input-group">
                         <div class="input-group-prepend">
@@ -217,18 +226,33 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label for="concepto">Concepto</label>
+                      <label for="metodo">Remitos Pendientes</label>
+                      <select type="text" class="form-control" id="metodo" placeholder="Cliente">
+                        <option>Remito 1</option>
+                        <option>Remito 2</option>
+                        <option>Remito 3</option>
+                        <option>Remito 4</option>
+                        <option>Remito 5</option>
+                        <option>Remito 6</option>
+                        <option>Remito 7</option>
+                        <option>Remito 8</option>
+                      </select> 
+                      <!-- ESTE SPAN TIENE QUE TRAER EL MONTO DEL REMITO, ESTAR ESCONDIDO MIENTRAS NO ELIJAN REMITO -->
+                      <span class="float-right">Monto Adeudado: <span id="monto">45000</span> $</span>
+                    </div>
+                    <div class="form-group">
+                      <label for="concepto">Observaciones</label>
                       <input type="text" class="form-control" id="concepto" placeholder="Detalle del pago">
                     </div>
                   </div>
                   <!-- /.card-body -->
-
                   <div class="card-footer">
                     <button type="submit" class="btn btn-success">INGRESAR PAGO</button>
                     <button type="reset" class="btn btn-default float-right">Cancelar</button>
                   </div>
                 </form>
               </div>
+              <!-- /card de pagos -->
             </div>
             <div class="col-12 col-lg-9 col-xs-8">
               <div class="card">
