nav, tel, delivery img, cartero sizes, horarios anim

--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -27,7 +27,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg sticky-top px-4 pt-0 mb-3" id="nav-fenix">
+  <nav class="navbar navbar-expand-lg sticky-top px-4 py-0 mb-3" id="nav-fenix">
     <a class="navbar-brand bg-light sombra" href="#carrusel">
       <img src="./img/logo-fenix.png" class="img-fluid" alt="logo fenix">
     </a>
@@ -39,11 +39,11 @@
     <div class="collapse navbar-collapse flex-column ml-lg-0 px-2 bg-transparent" id="navbar">
       <ul class="navbar-nav nav-rrss flex-row pl-2 mb-0 mr-auto">
         <li class="nav-item">
-          <a class="nav-link px-1" href="https://www.instagram.com/farmacianuevasocial/" target="_blank"><i
+          <a class="nav-link py-0 px-1" href="https://www.instagram.com/farmacianuevasocial/" target="_blank"><i
               class="fab fa-instagram-square text-success fa-2x"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link px-1" href="https://www.facebook.com/farmacianuevasocial/" target="_blank"><i
+          <a class="nav-link py-0 px-1" href="https://www.facebook.com/farmacianuevasocial/" target="_blank"><i
               class="fab fa-facebook-square text-success fa-2x"></i></a>
         </li>
       </ul>
@@ -279,7 +279,7 @@
         </h3>
         <br>
         <h3 class="btn btn-lg btn-dark rounded-pill pl-0 btn-envios">
-          <i class="fa fa-whatsapp fa-round border-0"></i>
+          <i class="fa fa-whatsapp fa-round border-0 fa-2x"></i>
           +54 911 5566-7788
         </h3>
         <br>
@@ -290,8 +290,8 @@
           </a>
         </h3>
       </div>
-      <div class="col-12 col-lg-5 p-5">
-        <img src="./img/delivery.png" class="img-fluid" alt="" style="width: 400px;">
+      <div class="col-12 col-lg-5 p-0 px-1">
+        <img src="./img/delivery.png" class="img-fluid img-delivery" alt="">
       </div>
     </div>
   </section>
@@ -467,7 +467,7 @@
         <div class="col-5">
           <img src="./img/covid/ministerio.jpg" alt="ministerio de salud" class="img-fluid float-right w-50 mt-4">
         </div>
-        <a href="tel:08002221002" class="btn bg-danger btn-block btn-lg p- m-5" id="tel-covid">
+        <a href="tel:08002221002" class="btn bg-danger btn-block btn-lg p-1 m-3" id="tel-covid">
           <h4 class="d-inline-block text-white p-4 mb-0">
             Para más información comunicarse <br>
             a este número de teléfono sin cargo.
@@ -496,12 +496,12 @@
             <div class="card-sucursal">
               <h1 class="text-light">Mosconi</h1>
               <h3 class="text-light">Av. J. Artigas 4702, CABA</h3>
-              <h3 class="d-inline-block border-white pt-2 font-weight-light text-light"
+              <h4 class="border-white pt-2 font-weight-light text-light horarios"
                 style="border-top: 3px solid white;">
                 Lunes a Viernes de
                 8 a
-                22 hs.</h3>
-              <h3 class="font-weight-light text-light">Sábados de 8 a 21 hs.</h3>
+                22 hs.</h4>
+              <h4 class="font-weight-light text-light horarios">Sábados de 8 a 21 hs.</h4>
             </div>
           </a>
           <a href="https://goo.gl/maps/PQEUZ6gQ3uwG6MGg7" class="text-light font-weight-normal d-block m-5">
@@ -515,12 +515,12 @@
             <div class="card-sucursal">
               <h1 class="text-light">Griveo</h1>
               <h3 class="text-light">Av. J. Artigas 4901, CABA</h3>
-              <h3 class="d-inline-block border-white pt-2 font-weight-light text-light"
+              <h4 class="border-white pt-2 font-weight-light text-light horarios"
                 style="border-top: 3px solid white;">
                 Lunes a Viernes de
-                8 a
-                22 hs.</h3>
-              <h3 class="font-weight-light text-light">Sábados de 8 a 21 hs.</h3>
+                8:30 a
+                20 hs.</h4>
+              <h4 class="font-weight-light text-light horarios">Sábados de 9 a 14 hs y de 16 a 20hs.</h4>
             </div>
           </a>
           <a href="https://goo.gl/maps/4YTtEnQLKko27tVA6" class="text-light font-weight-normal d-block m-5">
@@ -608,9 +608,8 @@
           </div>
         </form>
       </div>
-      <div class="col-12 col-lg-6">
-        <img src="./img/cartero.png" style="position: absolute; height: 100%; right: -2px; bottom: 0;"
-          class="mr-n5 mb-n5" alt="">
+      <div class="col-12 col-lg-6 mt-n5">
+        <img src="./img/cartero.png" class="mr-n5 mb-n5 cartero" alt="">
       </div>
     </div>
   </section>
