cambio cantidad clientes

--- a/LeaniM/panelClientes.html
+++ b/LeaniM/panelClientes.html
@@ -586,9 +586,8 @@
       cambiarTotal();
       });
     
-    // mostrar datos de cantidad (hardcodeado)
+    // mostrar datos de cantidad (hardcodeado) ver de tomar cambios al presionar keys
     seleccionCantidad.addEventListener('change', ( event ) => {
-      console.log(event.target.value);
       cambiarTotal();
     });
 
