cambios responsive contact categories about

--- a/bac-template/about-us.html
+++ b/bac-template/about-us.html
@@ -234,36 +234,36 @@
           </div>
         </section>
         <section class="container text-center">
-          <div class="row">
-            <div class="col wow animate__fadeInRight animate__slow animate__delay-1s">
+          <div class="row justify-content-center">
+            <div class="col-sm-2 col-12 wow animate__fadeInRight animate__slow animate__delay-1s">
               <a href="#" class="">
                 <img class="d-block mx-auto rounded-circle border-success profile-custom" src="./img/about/profile1.jpg"
                   alt="profile img" data-holder-rendered="true">
                 <h4 class="mt-3">Profile Name</h4>
               </a>
             </div>
-            <div class="col wow animate__fadeInRight animate__slow animate__delay-2s">
+            <div class="col-sm-2 col-12 wow animate__fadeInRight animate__slow animate__delay-2s">
               <a href="#" class="">
                 <img class="d-block mx-auto rounded-circle border-success profile-custom" src="./img/about/profile2.jpg"
                   alt="profile img" data-holder-rendered="true">
                 <h4 class="mt-3">Profile Name</h4>
               </a>
             </div>
-            <div class="col wow animate__fadeInRight animate__slow animate__delay-3s">
+            <div class="col-sm-2 col-12 wow animate__fadeInRight animate__slow animate__delay-3s">
               <a href="#" class="">
                 <img class="d-block mx-auto rounded-circle border-success profile-custom" src="./img/about/profile3.jpg"
                   alt="profile img">
                 <h4 class="mt-3">Profile Name</h4>
               </a>
             </div>
-            <div class="col wow animate__fadeInRight animate__slow animate__delay-4s">
+            <div class="col-sm-2 col-12 wow animate__fadeInRight animate__slow animate__delay-4s">
               <a href="#" class="">
                 <img class="d-block mx-auto rounded-circle border-success profile-custom" src="./img/about/profile4.jpg"
                   alt="profile img">
                 <h4 class="mt-3">Profile Name</h4>
               </a>
             </div>
-            <div class="col wow animate__fadeInRight animate__slow animate__delay-5s">
+            <div class="col-sm-2 col-12 wow animate__fadeInRight animate__slow animate__delay-5s">
               <a href="#" class="">
                 <img class="d-block mx-auto rounded-circle border-success profile-custom" src="./img/about/profile5.jpg"
                   alt="profile img">
