--- a/bac-template/contact.html
+++ b/bac-template/contact.html
@@ -103,45 +103,45 @@
           <h5 class="subtitle">Contáctese</h5>
           <h3 class="title">LE RESPONDEREMOS A LA BREVEDAD</h3>
           <div class="row">
-            <div class="col">
-              <div class="row my-4 wow animate__fadeInLeft animate__delay-2s animate__slow">
-                <div class="offset-1 col col-sm-3">
+            <div class="col-sm-6 col-12">
+              <div class="row my-4 px-4 wow animate__fadeInLeft animate__delay-2s animate__slow">
+                <div class="col-sm-3 col-4">
                   <div class="service-icons bg-light">
                     <i class="fa fa-envelope fa-3x text-success"></i>
                   </div>
                 </div>
-                <div class="col col-sm-8">
+                <div class="col-sm-8 col-8">
                   <div class="service-text">
                     <h5><a href="mailto:info@switchit.com.ar">info@switchit.com.ar</a></h5>
                   </div>
                 </div>
               </div>
-              <div class="row my-4 wow animate__fadeInLeft animate__delay-3s animate__slow">
-                <div class="offset-1 col col-sm-3">
+              <div class="row my-4 px-4 wow animate__fadeInLeft animate__delay-3s animate__slow">
+                <div class="col-sm-3 col-4">
                   <div class="service-icons bg-light">
                     <i class="fa fa-map fa-3x text-success"></i>
                   </div>
                 </div>
-                <div class="col col-sm-8">
+                <div class="col-sm-8 col-8">
                   <div class="service-text">
                     <h5>Aviador Agneta 1234, Tres de Febrero, Bs As</h5>
                   </div>
                 </div>
               </div>
-              <div class="row my-4 wow animate__fadeInLeft animate__delay-4s animate__slow">
-                <div class="offset-1 col col-sm-3">
+              <div class="row my-4 px-4 wow animate__fadeInLeft animate__delay-4s animate__slow">
+                <div class="col-sm-3 col-4">
                   <div class="service-icons bg-light">
                     <i class="fa fa-phone fa-3x text-success"></i>
                   </div>
                 </div>
-                <div class="col col-sm-8">
+                <div class="col-sm-8 col-8">
                   <div class="service-text">
                     <h5>Tel: <a href="tel:0303456">11-0303-456♫</a></h5>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-sm-6 col-12">
               <form action="contactForm()" method="post">
                 <div class="form-group">
                   <input type="text" class="form-control form-control-lg" placeholder="Nombre" name="Nombre">
