--- a/bac-template/index.html
+++ b/bac-template/index.html
@@ -198,37 +198,37 @@
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit molestiae alias
                                 repellat vero dolor expedita aspernatur.
                             </p>
-                            <div class="row my-4 wow animate__fadeInLeft animate__delay-2s">
-                                <div class="offset-1 col col-sm-3">
+                            <div class="row my-4 wow animate__fadeInLeft animate__delay-2s px-4">
+                                <div class="col-sm-3 col-4">
                                     <div class="service-icons bg-light">
                                         <i class="fa fa-users fa-3x text-success"></i>
                                     </div>
                                 </div>
-                                <div class="col col-sm-8">
+                                <div class="col-sm-8 col-8">
                                     <div class="service-text">
                                         <h3 class="font-weight-light">Lorem ipsum dolor sit amet.</h3>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row my-4 wow animate__fadeInLeft animate__delay-3s">
-                                <div class="offset-1 col col-sm-3">
+                            <div class="row my-4 wow animate__fadeInLeft animate__delay-3s px-4">
+                                <div class="col-sm-3 col-4">
                                     <div class="service-icons bg-light">
                                         <i class="fa fa-cogs fa-3x text-success"></i>
                                     </div>
                                 </div>
-                                <div class="col col-sm-8">
+                                <div class="col-sm-8 col-8">
                                     <div class="service-text">
                                         <h3 class="font-weight-light">Lorem, ipsum dolor.</h3>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row my-4 wow animate__fadeInLeft animate__delay-4s">
-                                <div class="offset-1 col col-sm-3">
+                            <div class="row my-4 wow animate__fadeInLeft animate__delay-4s px-4">
+                                <div class="col-sm-3 col-4">
                                     <div class="service-icons bg-light">
                                         <i class="fa fa-truck fa-3x text-success"></i>
                                     </div>
                                 </div>
-                                <div class="col col-sm-8">
+                                <div class="col-sm-8 col-8">
                                     <div class="service-text">
                                         <h3 class="font-weight-light">Lorem, ipsum.</h3>
                                     </div>
