cambios css responsive cambios id categories y js

--- a/bac-template/categories.html
+++ b/bac-template/categories.html
@@ -114,7 +114,7 @@
           </div>
         </nav>
       </aside>
-      <main class="col bg-white" id="categories">
+      <main class="col bg-white" id="main-categories">
         <section class="max-vh-100 w-100 h-100">
           <div class="row w-100 h-100 m-0">
             <a href="./products.html" class="w-50 h-50">
