--- a/bac-template/products-a/product-1.html
+++ b/bac-template/products-a/product-1.html
@@ -127,7 +127,7 @@
         </section>
         <section class="container my-3 flex-grow-1 wow animate__fadeIn animate__delay-3s">
           <div class="row">
-            <div class="col-lg-4 col-md-5 col-sm-12 wow animate__fadeInLeft animate__delay-4s">
+            <div class="col-lg-4 col-md-5 col-sm-12 mb-3 wow animate__fadeInLeft animate__delay-4s px-4">
               <h5 class="btn btn-lg btn-block btn-success">Specs: A</h5>
               <h5 class="btn btn-lg btn-block btn-success">Specs: B</h5>
               <h5 class="btn btn-lg btn-block btn-success">Specs: C</h5>
@@ -145,7 +145,7 @@
               <h5 class="btn btn-lg btn-block btn-success">Link Del Producto</h5>
             </div>
           </div>
-          <div class="my-4 wow animate__fadeInUp animate__delay-5s">
+          <div class="my-4 px-2 wow animate__fadeInUp animate__delay-5s">
             <h5>Resumen:</h5>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque repudiandae distinctio inventore eligendi
