add wzp mobile icon

--- a/bac-template/products-a/product-1.html
+++ b/bac-template/products-a/product-1.html
@@ -188,6 +188,10 @@
     </div>
   </div>
 
+  <!-- Logo Whatsapp Mobile -->
+  <div class="d-none" id="wzp">
+    <a target="_blank" href="https://wa.me/5491135568745?text=Estoy%20interesado%20en%20recibir%20atencion%20personalizada"><i class="fab fa-whatsapp wzp-float" aria-hidden="true"></i></a>
+  </div>
 
   <!-- jQuery, Popper.js, and  Bootstrap JS-->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
